
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.1 (rev 596+ - December 13, 2005)
==================
* Fix #124 regClientStartupScript and regClientScript don't work in uncached snippets.
* Fix #166 manager menu3 and menu4 updates.
* Fixed obscure bug with PHP ini check on File Manager and some versions of PHP.
* Fix #165: Parent Docgroups were not being inherrited in NewsPublisher as expected.
* Implement #44: Make publish/unpublish dates editable by hand (don't force repeated clicks with the date picker)
* Clarified document editing form Summary line (changed to "Summary (introtext)") to clear up DB confusion for devs
* Fix placeholder behavior for unrecognized placeholder and for those that could be viewed as false (e.g., "0")
* Restored ability to truncate after N-characters in Newslisting Snippet without being in the middle of an open tag
* FCK Editor updated to version 2.1.2 and added source protection for [[ ]] and [! !].
* Fix empty variable induced parse error [bugs 127 and 144]
* New basic personalization snippet: Personalize.
* New conditional display snippet based on logged in user's group membership: MemberCheck.
* Added proper primary key index to site_tmplvar_templates table to prevent duplicate entries from upgrade script.
* Added preliminary Spanish Translation.
* Massive feature updates to Newslisting.
* Added new role and ability to preview unpublished docs in QE and in the manager.
* Added ability to UserComments snippet to specify doc to read comments from.
* New @INHERIT @binding.
* Prevent manager from timing out and loosing work during long editing sessions [bug 146].
* Added Duplicate command to contextual menu [request 5].
* Add ability to limit editing and return to manager rights in QE.
* Fix duplicate language definitions and boatloads of typos [bug 141]